--- a/Solutions/Corvus.Json.JsonSchema/Corvus.Json.JsonSchema.csproj
+++ b/Solutions/Corvus.Json.JsonSchema/Corvus.Json.JsonSchema.csproj
@@ -18,12 +18,12 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0-rc.1.23419.4" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="8.0.0-rc.1.23421.29" />
 		<PackageReference Include="NodaTime" Version="3.1.9" />
 		<PackageReference Include="System.Buffers" Version="4.5.1" />
-		<PackageReference Include="System.Collections.Immutable" Version="7.0.0" />
-		<PackageReference Include="System.Text.Json" Version="7.0.3" />
+		<PackageReference Include="System.Collections.Immutable" Version="8.0.0-rc.1.23419.4" />
+		<PackageReference Include="System.Text.Json" Version="8.0.0-rc.1.23419.4" />
 	</ItemGroup>
 
 	<ItemGroup>
