Improve JsonPatch performance.

--- a/Solutions/Sandbox/Sandbox.csproj
+++ b/Solutions/Sandbox/Sandbox.csproj
@@ -16,6 +16,7 @@
 	  <ProjectReference Include="..\Corvus.Json.ExtendedTypes\Corvus.Json.ExtendedTypes.csproj" />
 	  <ProjectReference Include="..\Corvus.Json.JsonSchema\Corvus.Json.JsonSchema.csproj" />
 	  <ProjectReference Include="..\Corvus.Json.Patch\Corvus.Json.Patch.csproj" />
+	  <ProjectReference Include="..\Corvus.JsonPatch.Benchmarking\Corvus.JsonPatch.Benchmarking.csproj" />
 	</ItemGroup>
 
 </Project>
