Update to latest packages and test suite.
-- Pending update to Corvus.UriTemplates

--- a/Solutions/Corvus.Json.CodeGeneration.202012/Corvus.Json.CodeGeneration.202012.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.202012/Corvus.Json.CodeGeneration.202012.csproj
@@ -22,11 +22,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Corvus.Extensions" Version="1.1.11" />
-		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.6">
+		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.7">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="System.CodeDom" Version="8.0.0-rc.2.23479.6" />
+		<PackageReference Include="System.CodeDom" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -39,7 +39,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Update="Roslynator.Analyzers" Version="4.5.0" />
+		<PackageReference Update="Roslynator.Analyzers" Version="4.6.2" />
 	</ItemGroup>
 
 </Project>
