--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/Corvus.Json.CodeGeneration.Abstractions.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/Corvus.Json.CodeGeneration.Abstractions.csproj
@@ -22,7 +22,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0-2.final" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" />
 		<PackageReference Include="System.CodeDom" Version="8.0.0" />
 	</ItemGroup>
 
