--- a/Solutions/Corvus.Json.CodeGeneration.202012/Corvus.Json.CodeGeneration.202012.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.202012/Corvus.Json.CodeGeneration.202012.csproj
@@ -2,7 +2,7 @@
 	<Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -15,10 +15,6 @@
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 		<Description>A library for generating code from .NET types representing data types found in JSON.</Description>
 	</PropertyGroup>
-
-	<ItemGroup>
-	  <None Remove="Corvus.Json.CodeGeneration.Draft202012\Generators\CodeGenerator.Validate.AllOf.Partial.cs~RF1264d695.TMP" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.9">
