--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/Corvus.Json.CodeGeneration.Abstractions.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/Corvus.Json.CodeGeneration.Abstractions.csproj
@@ -2,7 +2,7 @@
 	<Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -15,6 +15,10 @@
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 		<Description>A library for generating code from .NET types representing data types found in JSON.</Description>
 	</PropertyGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<Compile Remove="Corvus.Json\CodeGeneration\DictionaryExtensionsNetStandard20.cs" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.9">
