--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -21,10 +21,16 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
-		<Compile Remove="Features\UriTemplates\**" />
-		<Compile Remove="Features\JsonModel\Cast\JsonUriTemplateCast.*" />
-		<Compile Remove="Features\JsonModel\Equals\JsonUriTemplateEquals.*" />
+		<SpecFlowFeatureFiles Remove="Features/UriTemplates/*.feature" />
+		<SpecFlowFeatureFiles Remove="Features/**/numeric-format.feature" />
+		<Compile Remove="Features/UriTemplates/*.cs" />
+		<Compile Remove="Features/**/numeric-format.feature.cs" />
 		<Compile Remove="Steps\UriTemplateSteps.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net80'">
+		<SpecFlowFeatureFiles Remove="Features/**/numeric-format-netstandard20.feature" />
+		<Compile Remove="Features/**/numeric-format-netstandard20.feature.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -75,11 +81,5 @@
 		<PackageReference Update="Roslynator.Analyzers" Version="4.6.2" />
 	</ItemGroup>
 
-	<ItemGroup>
-	  <SpecFlowFeatureFiles Update="Features\UriTemplates\JsonUriTemplateSerialization.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
-	</ItemGroup>
 
 </Project>
