--- a/Solutions/Corvus.JsonPatch.Benchmarking/Corvus.JsonPatch.Benchmarking.csproj
+++ b/Solutions/Corvus.JsonPatch.Benchmarking/Corvus.JsonPatch.Benchmarking.csproj
@@ -3,7 +3,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net481;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
