--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,10 +53,10 @@ jobs:
 
   build:
     needs: prepareConfig
-    uses: endjin/Endjin.RecommendedPractices.GitHubActions/.github/workflows/scripted-build-pipeline.yml@main
+    uses: .github/workflows/matrix-build-pipeline.yml
     with:
       netSdkVersion: '8.0.x'
-      additionalNetSdkVersion: '7.0.x'
+      # additionalNetSdkVersion: '7.0.x'
       # workflow_dispatch inputs are always strings, the type property is just for the UI
       forcePublish: ${{ github.event.inputs.forcePublish == 'true' || github.event_name == 'pull_request' }}
       skipCleanup: ${{ github.event.inputs.skipCleanup == 'true' }}
