--- a/.github/workflows/matrix-build-workflow.yml
+++ b/.github/workflows/matrix-build-workflow.yml
@@ -101,12 +101,16 @@ env:
   CODE_COVERAGE_UPPER_THRESHOLD: ${{ vars.BUILD_CODE_COVERAGE_UPPER_THRESHOLD || 80 }}
 
 jobs:
-  compile:
-    name: Compile & Analyse
+  build:
+    name: Run Build
     strategy:
       matrix:
-        netfx: [ '8.0.x', '4.8.x' ]
-    runs-on: ubuntu-latest
+        include:
+          - netfx: '8.0.x'
+            os: ubuntu-latest
+          - netfx: '4.8.x'
+            os: windows-latest
+    runs-on: ${{ matrix.os }}
     outputs:
       semver: ${{ steps.run_compile.outputs.semver }}
       major: ${{ steps.run_compile.outputs.major }}
@@ -149,7 +153,7 @@ jobs:
         netSdkVersion: ${{ matrix.netfx }}
         additionalNetSdkVersion: ${{ inputs.additionalNetSdkVersion }}
         pythonVersion: ${{ inputs.pythonVersion }}
-        tasks: 'Build,Analysis'
+        tasks: 'FullBuild'
         configuration: ${{ inputs.configuration }}
         outputCachePaths: |
           .nuget-packages
@@ -170,219 +174,4 @@ jobs:
             "git_sha": "${{ github.sha }}"
           }
 
-  test:
-    needs:
-    - compile
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
-      with:
-        fetch-depth: 0
-    - uses: endjin/Endjin.RecommendedPractices.GitHubActions/actions/set-env-vars-and-secrets@main
-      with: 
-        environmentVariablesYamlBase64: ${{ inputs.testPhaseEnv}}
-        secretsYamlBase64: ${{ secrets.testPhaseSecrets}}
-    - name: Debug Variables
-      if: env.ACTIONS_RUNNER_DEBUG == 'true'
-      run: |
-        gci env:/ | fl | out-string | Write-Host
-      shell: pwsh
-    - name: Check if testPhaseAzureCredentials secret is set
-      id: testPhaseAzureCredentials_secret_check
-      shell: bash
-      run: |
-        if [ "${{ secrets.testPhaseAzureCredentials }}" != '' ]; then
-          echo "available=true" >> $GITHUB_OUTPUT;
-        else
-          echo "available=false" >> $GITHUB_OUTPUT;
-        fi
-    - name: Azure CLI login
-      if: ${{ steps.testPhaseAzureCredentials_secret_check.outputs.available == 'true' }}
-      uses: azure/login@8c334a195cbb38e46038007b304988d888bf676a    # v2.0.0
-      with:
-        creds: ${{ secrets.testPhaseAzureCredentials }}
-        enable-AzPSSession: true
-    - uses: endjin/Endjin.RecommendedPractices.GitHubActions/actions/run-scripted-build@main
-      with:
-        displayName: Run Tests
-        buildScriptPath: ${{ inputs.buildScriptPath }}
-        netSdkVersion: ${{ inputs.netSdkVersion }}
-        additionalNetSdkVersion: ${{ inputs.additionalNetSdkVersion }}
-        tasks: 'Test,TestReport'
-        configuration: ${{ inputs.configuration }}
-        inputCachePaths: |
-          .nuget-packages
-          Solutions
-          solutions
-          ${{ inputs.additionalCachePaths }}
-        artifactName: ${{ inputs.testArtifactName }}
-        artifactPath: ${{ inputs.testArtifactPath }}
-      env:
-        BUILDVAR_TestReportTypes: HtmlInline;Cobertura
-        # testing new multiple test logger support - will only affect repos using latest version of build module
-        BUILDVAR_DotNetTestLoggers: >
-          [
-            "GitHubActions",
-            "trx;LogFilePrefix=test-results_"
-          ]
-    - id: check_coverage
-      name: Check Code Coverage Output
-      if: always()
-      run: |
-        # check if the code coverage file exists, but ensure the build doesn't fail if it can't be found
-        try {
-          $coverageFile = Join-Path $env:CODE_COVERAGE_RESULTS_DIR $env:CODE_COVERAGE_RESULTS_FILE
-          Write-Host "Checking for code coverage file: $coverageFile"
-          if (Test-Path $coverageFile) {
-            Write-Host "Code coverage file exists"
-            echo "EXISTS=true" >> $env:GITHUB_OUTPUT
-          }
-        }
-        catch {}
-      shell: pwsh
-    - name: Store Code Coverage Artefacts
-      if: always() && steps.check_coverage.outputs.EXISTS == 'true'
-      uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8    # v4.3.0
-      with:
-        name: CoverageReport      
-        path: _codeCoverage
-    - name: Generate Code Coverage Summary Report
-      if: always() && steps.check_coverage.outputs.EXISTS == 'true'
-      uses: irongut/CodeCoverageSummary@51cc3a756ddcd398d447c044c02cb6aa83fdae95    # v1.3.0
-      with:
-        filename: ${{ env.CODE_COVERAGE_RESULTS_DIR }}/${{ env.CODE_COVERAGE_RESULTS_FILE }}
-        badge: true
-        fail_below_min: false
-        format: markdown
-        hide_branch_rate: false
-        hide_complexity: false
-        indicators: true
-        output: both
-        thresholds: '${{ env.CODE_COVERAGE_LOWER_THRESHOLD }} ${{ env.CODE_COVERAGE_UPPER_THRESHOLD }}'
-    - name: Publish Code Coverage Summary Report
-      # NOTE: Skip this is we're running from a fork, as we won't have permissions to annotate the check run
-      if: always() && steps.check_coverage.outputs.EXISTS == 'true' && github.event.pull_request.head.repo.full_name == github.repository
-      uses: dtinth/markdown-report-action@af8143d37cced4c514fd67539a2e58c2f432da09    # v1.0.0
-      with:
-        name: Code Coverage
-        title: Code Coverage Report
-        body-file: code-coverage-results.md
-    - name: Add Code Coverage PR comment
-      if: always() && steps.check_coverage.outputs.EXISTS == 'true' && github.event_name == 'pull_request'
-      uses: marocchino/sticky-pull-request-comment@331f8f5b4215f0445d3c07b4967662a32a2d3e31    # v2.9.0
-      with:
-        recreate: true
-        path: code-coverage-results.md
-    - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@e780361cd1fc1b1a170624547b3ffda64787d365   # v2.12.0
-      if: always()
-      with:
-        nunit_files: "*TestResults.xml"    # produced by Pester
-        trx_files: "**/test-results_*.trx" # produced by dotnet test
-        junit_files: "**/*-test-results.xml" # produced by PyTest & Behave
-
-  package:
-    needs:
-    - compile
-    name: Package
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
-      with:
-        fetch-depth: 0
-    - uses: endjin/Endjin.RecommendedPractices.GitHubActions/actions/set-env-vars-and-secrets@main
-      with: 
-        environmentVariablesYamlBase64: ${{ inputs.packagePhaseEnv}}
-        secretsYamlBase64: ${{ secrets.packagePhaseSecrets}}
-    - name: Debug Variables
-      if: env.ACTIONS_RUNNER_DEBUG == 'true'
-      run: |
-        gci env:/ | fl | out-string | Write-Host
-      shell: pwsh   
-    - name: Check if packagePhaseAzureCredentials secret is set
-      id: packagePhaseAzureCredentials_secret_check
-      shell: bash
-      run: |
-        if [ "${{ secrets.packagePhaseAzureCredentials }}" != '' ]; then
-          echo "available=true" >> $GITHUB_OUTPUT;
-        else
-          echo "available=false" >> $GITHUB_OUTPUT;
-        fi
-    - name: Azure CLI login
-      if: ${{ steps.packagePhaseAzureCredentials_secret_check.outputs.available == 'true' }}
-      uses: azure/login@8c334a195cbb38e46038007b304988d888bf676a    # v2.0.0
-      with:
-        creds: ${{ secrets.packagePhaseAzureCredentials }}
-        enable-AzPSSession: true     
-    - uses: endjin/Endjin.RecommendedPractices.GitHubActions/actions/run-scripted-build@main
-      with:
-        displayName: Build Packages
-        buildScriptPath: ${{ inputs.buildScriptPath }}
-        netSdkVersion: ${{ inputs.netSdkVersion }}
-        additionalNetSdkVersion: ${{ inputs.additionalNetSdkVersion }}
-        tasks: 'Package'
-        configuration: ${{ inputs.configuration }}
-        inputCachePaths: |
-          .nuget-packages
-          Solutions
-          solutions
-          ${{ inputs.additionalCachePaths }}
-        outputCachePaths: |
-          _packages
-          ${{ inputs.additionalCachePaths }}
-
-  publish:
-    needs:
-    - compile
-    - test
-    - package
-    name: Publish
-    if: inputs.forcePublish || startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
-    steps:
-    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11   #v4.1.1
-      with:
-        fetch-depth: 0
-    - uses: endjin/Endjin.RecommendedPractices.GitHubActions/actions/set-env-vars-and-secrets@main
-      with: 
-        environmentVariablesYamlBase64: ${{ inputs.publishPhaseEnv}}
-        secretsYamlBase64: ${{ secrets.publishPhaseSecrets}}
-    - name: Debug Variables
-      if: env.ACTIONS_RUNNER_DEBUG == 'true'
-      run: |
-        gci env:/ | fl | out-string | Write-Host
-      shell: pwsh    
-    - name: Check if publishPhaseAzureCredentials secret is set
-      id: publishPhaseAzureCredentials_secret_check
-      shell: bash
-      run: |
-        if [ "${{ secrets.publishPhaseAzureCredentials }}" != '' ]; then
-          echo "available=true" >> $GITHUB_OUTPUT;
-        else
-          echo "available=false" >> $GITHUB_OUTPUT;
-        fi
-    - name: Azure CLI login
-      if: ${{ steps.publishPhaseAzureCredentials_secret_check.outputs.available == 'true' }}
-      uses: azure/login@8c334a195cbb38e46038007b304988d888bf676a    # v2.0.0
-      with:
-        creds: ${{ secrets.publishPhaseAzureCredentials }}
-        enable-AzPSSession: true    
-    - uses: endjin/Endjin.RecommendedPractices.GitHubActions/actions/run-scripted-build@main
-      with:
-        displayName: Publish Packages
-        buildScriptPath: ${{ inputs.buildScriptPath }}
-        netSdkVersion: ${{ inputs.netSdkVersion }}
-        additionalNetSdkVersion: ${{ inputs.additionalNetSdkVersion }}
-        tasks: 'Publish'
-        inputCachePaths: |
-          _packages
-          ${{ inputs.additionalCachePaths }}
-        artifactName: ${{ inputs.publishArtifactName }}
-        artifactPath: ${{ inputs.publishArtifactPath }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NUGET_API_KEY: ${{ env.NUGET_API_KEY }}
+  
