Experiment with removing '--no-build' and '--no-restore' flags from 'dotnet test' command Also tweak the workflow caching behaviour in the 'Test' job

--- a/.github/workflows/matrix-build-workflow.yml
+++ b/.github/workflows/matrix-build-workflow.yml
@@ -212,11 +212,11 @@ jobs:
         additionalNetSdkVersion: ${{ inputs.additionalNetSdkVersion }}
         tasks: 'Test,TestReport'
         configuration: ${{ inputs.configuration }}
-        inputCachePaths: |
-          .nuget-packages
-          Solutions
-          solutions
-          ${{ inputs.additionalCachePaths }}
+        # inputCachePaths: |
+        #   .nuget-packages
+        #   Solutions
+        #   solutions
+        #   ${{ inputs.additionalCachePaths }}
         artifactName: ${{ inputs.testArtifactName }}
         artifactPath: ${{ inputs.testArtifactPath }}
       env:
