Experiment with running the matrix build process as a single job Disable customisations to 'RunTests' task

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
 
   build:
     needs: prepareConfig
-    uses: ./.github/workflows/matrix-build-workflow.yml
+    uses: ./.github/workflows/matrix-build-workflow-single-job.yml
     with:
       netSdkVersion: '8.0.x'
       # additionalNetSdkVersion: '7.0.x'
@@ -66,9 +66,6 @@ jobs:
       testPhaseEnv: ${{ needs.prepareConfig.outputs.RESOLVED_ENV_VARS }}
       packagePhaseEnv: ${{ needs.prepareConfig.outputs.RESOLVED_ENV_VARS }}
       publishPhaseEnv: ${{ needs.prepareConfig.outputs.RESOLVED_ENV_VARS }}
-      additionalCachePaths: |
-        JSON-Schema-Test-Suite
-
     secrets:
       compilePhaseAzureCredentials: ${{ secrets.AZURE_READER_CREDENTIALS }}
       # testPhaseAzureCredentials: ${{ secrets.TESTS_KV_READER_CREDENTIALS }}
@@ -77,4 +74,4 @@ jobs:
       # compilePhaseSecrets: ${{ needs.prepareConfig.outputs.RESOLVED_SECRETS }}
       # testPhaseSecrets: ${{ needs.prepareConfig.outputs.RESOLVED_SECRETS }}
       # packagePhaseSecrets: ${{ needs.prepareConfig.outputs.RESOLVED_SECRETS }}
-      publishPhaseSecrets: ${{ needs.prepareConfig.outputs.RESOLVED_SECRETS }}
+      # publishPhaseSecrets: ${{ needs.prepareConfig.outputs.RESOLVED_SECRETS }}
