Ensure uploaded artefacts are unique between matrix runs

--- a/.github/workflows/matrix-build-workflow-single-job.yml
+++ b/.github/workflows/matrix-build-workflow-single-job.yml
@@ -194,7 +194,7 @@ jobs:
       if: always() && steps.check_coverage.outputs.EXISTS == 'true'
       uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8    # v4.3.0
       with:
-        name: CoverageReport      
+        name: CoverageReport-${{ matrix.os }}   
         path: _codeCoverage
     - name: Generate Code Coverage Summary Report
       if: always() && steps.check_coverage.outputs.EXISTS == 'true'
