Switch trigger back to PR

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,12 +3,12 @@ on:
   push:
     branches:
     - main
-    - feature/gha-migration
     tags:
     - '*'
   pull_request:
     branches:
     - main
+    - feature/netstandard20
   workflow_dispatch:
     inputs:
       forcePublish:
