Update build to use 'dotnet-coverage' tool instead of coverlet

--- a/.github/workflows/matrix-build-workflow.yml
+++ b/.github/workflows/matrix-build-workflow.yml
@@ -241,11 +241,7 @@ jobs:
           [
             "trx;LogFilePrefix=test-results_"
           ]
-        BUILDVAR_AdditionalTestArgs: >
-          [
-            "--framework",
-            "${{ matrix.framework }}"
-          ]
+        BUILDVAR_BuildFrameworkMoniker: ${{ matrix.framework }}
     # - id: check_coverage
     #   name: Check Code Coverage Output
     #   if: always()
